# privaxy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  update-filters.yaml
debian/: postinst  postrm  prerm  privaxy.service
filterlists-api/: Cargo.toml
filterlists-api/src/: dtypes.rs  get.rs  lib.rs
privaxy/: Cargo.toml
privaxy/debian/: postinst  postrm  prerm  privaxy.service
privaxy/src/server/: blocker.rs  blocker_utils.rs  ca.rs  cert.rs  configuration.rs  lib.rs  main.rs
privaxy/src/server/configuration/: ca.rs  filter.rs  mod.rs  network.rs  updater.rs
privaxy/src/server/proxy/: html_rewriter.rs  mitm.rs  serve.rs
privaxy/src/server/web_gui/: blocking_enabled.rs  custom_filters.rs  events.rs  exclusions.rs  filterlists.rs  filters.rs  mod.rs  settings.rs  statistics.rs
privaxy/src/server/web_gui/settings/: ca_certificate.rs  mod.rs  network.rs
web_frontend/: Cargo.toml  index.html  package-lock.json  package.json
web_frontend/src/: blocking_enabled.rs  button.rs  dashboard.rs  filterlists.rs  filters.rs  general.rs  main.rs  requests.rs  save_button.rs  settings.rs  settings_textarea.rs  submit_banner.rs  tailwind.css
web_frontend/static/: validate_cert.js
